Fix: alignment issue of the dropdown menu fixed

--- a/src/layout/components/navbar/UserTop.css
+++ b/src/layout/components/navbar/UserTop.css
@@ -1,35 +1,25 @@
-.userName{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: #ffffff;
-    font-weight: bold;
-    position: relative;
+.userName {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: #ffffff;
+  font-weight: bold;
+  position: relative;
+}
+.userName::after {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  right: -5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
 }
 
-.userName.isOnline::after{
-    content: '';
-    position: absolute;
-    bottom: -4px;
-    right: -5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #3dff02;
+.userName.isOnline::after {
+  background-color: #3dff02;
 }
-.userName.isOffline::after{
-    content: '';
-    position: absolute;
-    bottom: -4px;
-    right: -5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #a4aaa2;
+.userName.isOffline::after {
+  background-color: #a4aaa2;
 }
-
-/* 
-.userName::after{
-    background-color: #3dff02;
-} */
